--- a/css/index.css
+++ b/css/index.css
@@ -4,217 +4,407 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
 
-*{
+* {
     box-sizing: border-box;
-    padding:0;
-    margin:0;
-    max-width:100%;
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
     /* border:1px solid grey;  */
 }
 
 /*General Styles*/
-html{
-    font-size:62.5%;
+html {
+    font-size: 62.5%;
 }
-body{
-    font-size:1.8rem;
-    line-height:1.5;
-    color:#4f4f4f;
-    background-color:#FBFFFB;
-    font-family: 'Source Sans Pro', sans-serif;
+body {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    color: #4f4f4f;
+    background-color: #fbfffb;
+    font-family: "Source Sans Pro", sans-serif;
 }
-h1{
-    color:#FBFFFB;
-    font-size:6rem;
-    font-family: 'Oxygen', sans-serif;
+h1 {
+    color: #fbfffb;
+    font-size: 6rem;
+    font-family: "Oxygen", sans-serif;
 }
-h2{
-    font-size:3rem;
+h2 {
+    font-size: 3rem;
 }
-h3{
-    font-size:2.2rem;
+h3 {
+    font-size: 2.2rem;
 }
-h2, h3{
-    color:#266035;
-    text-align:center;
-    font-family: 'Oxygen', sans-serif;
-    margin-bottom:5%;
+h2,
+h3 {
+    color: #266035;
+    text-align: center;
+    font-family: "Oxygen", sans-serif;
+    margin-bottom: 5%;
 }
-a{
+a {
     text-decoration: none;
-    color:#266035;
-    font-family: 'Source Sans Pro', sans-serif;
+    color: #266035;
+    font-family: "Source Sans Pro", sans-serif;
 }
-button{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size:1.8rem;
-    padding:2% 4%;
-    margin-top:4%;
+button {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 1.8rem;
+    padding: 2% 4%;
+    margin-top: 4%;
 }
-section, footer{
-    padding:4% 0;
+section,
+footer {
+    padding: 4% 0;
 }
 /*helper classes*/
-.bg-img{
+.bg-img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 /*header section styles*/
-nav{
-    display:flex;
+nav {
+    display: flex;
     justify-content: space-between;
-    position:fixed;
-    width:100%;
-    top:0;
+    position: fixed;
+    width: 100%;
+    top: 0;
     z-index: 999; /*everything should scroll behind this*/
-    background-color:rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.8);
 }
-.logo{
-    width:5%;
+.logo {
+    width: 5%;
 }
-.links{
-    width:50%;
-    display:flex;
+.links {
+    width: 50%;
+    display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
 /*top section styles*/
-#top{
-    height:90vh;
-    background-image: url('../images/header.jpg');
+#top {
+    height: 90vh;
+    background-image: url("../images/header.jpg");
     background-position: bottom;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align:center;
+    text-align: center;
 }
-#top button{
-    border:2px solid #266035;
-    color:#266035;
-    background-color:#fff;
-    transition:2s;
+#top button {
+    border: 2px solid #266035;
+    color: #266035;
+    background-color: #fff;
+    transition: 2s;
 }
-#top button:hover{
-    color:#fff;
-    background-color:#266035;
-    border:2px solid #fff;
+#top button:hover {
+    color: #fff;
+    background-color: #266035;
+    border: 2px solid #fff;
 }
 
-/*About Section Styles*/ 
-#about{
-    height:85vh;
-    background-image:url('../images/about-img.jpg');
-    display:flex;
+/*About Section Styles*/
+#about {
+    height: 85vh;
+    background-image: url("../images/about-img.jpg");
+    display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-#about div{
-    width:20%;
-    margin-right:10%;
+#about div {
+    width: 20%;
+    margin-right: 10%;
 }
 
 /*Shop Section Styles*/
-#shop{
-    padding-bottom:0;
+#shop {
+    padding-bottom: 0;
 }
-.container{
-    display:flex;
-    flex-wrap:wrap;
+.container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.cacti, .tropicals, .succulants, .text{
-    width:50%;
+.cacti,
+.tropicals,
+.succulants,
+.text {
+    width: 50%;
 }
-.text{
-    padding:5%;
-    display:flex;
+.text {
+    padding: 5%;
+    display: flex;
     justify-content: center;
-    text-align:center;
+    text-align: center;
 }
-.text div{
-    width:60%;
+.text div {
+    width: 60%;
 }
-.text button{
-    background-color:#266035;
-    color:#fff;
-    border:2px solid #266035;
-    transition:2s;
+.text button {
+    background-color: #266035;
+    color: #fff;
+    border: 2px solid #266035;
+    transition: 2s;
 }
-.text button:hover{
-    background-color:#fff;
-    color:#266035;
+.text button:hover {
+    background-color: #fff;
+    color: #266035;
 }
-.succulants{
-    background-image:url('../images/succulants.jpg');
+.succulants {
+    background-image: url("../images/succulants.jpg");
 }
-.cacti{
-    background-image:url('../images/cacti.jpg');
+.cacti {
+    background-image: url("../images/cacti.jpg");
 }
-.tropicals{
-    background-image:url('../images/tropicals.jpg');
+.tropicals {
+    background-image: url("../images/tropicals.jpg");
 }
 
 /*footer section styles*/
-footer{
-    background-color:#266035;
-    display:flex;
-    flex-wrap:wrap;
-    color:#fff;
+footer {
+    background-color: #266035;
+    display: flex;
+    flex-wrap: wrap;
+    color: #fff;
 }
-footer h2{
-    color:#fff;
-    width:100%;
+footer h2 {
+    color: #fff;
+    width: 100%;
 }
-footer a, footer h3{
-    color:#fff;
-    text-align:left;
+footer a,
+footer h3 {
+    color: #fff;
+    text-align: left;
 }
-.right, .left{
-    width:50%;
-    display:flex;
+.right,
+.left {
+    width: 50%;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.left div.info{
-    width:60%;
-    line-height:2.5;
+.left div.info {
+    width: 60%;
+    line-height: 2.5;
 }
-.right img{
-    width:60%;
+.right img {
+    width: 60%;
 }
-.bottom{
-    width:100%;
-    text-align:right;
+.bottom {
+    width: 100%;
+    text-align: right;
 }
-.bottom p{
-    margin-right:5%;
-    margin-top:2%;
+.bottom p {
+    margin-right: 5%;
+    margin-top: 2%;
 }
+
+/* Responsive styles*/
+
+/*Tables media query*/
+@media (max-width: 800px) {
+    .logo {
+        width: 8%;
+    }
+    #about div {
+        width: 50%;
+        margin-right: 3%;
+        margin-top: 20%;
+    }
+
+    .text div {
+        width: 80%;
+    }
+
+    .bottom p {
+        margin-right: 10%;
+    }
+
+    .left div.info {
+        line-height: 2;
+    }
+} /*closes 800px media query*/
+
+/*Phone media query*/
+@media (max-width: 500px) {
+    nav {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .links {
+        width: 100%;
+    }
+
+    #about {
+        background-image: none;
+        background-color: lightgrey;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    #about div {
+        margin: 0;
+        width: 80%;
+    }
+
+    /*Shop section styles*/
+    .container {
+        justify-content: center;
+    }
+    .cacti,
+    .tropicals,
+    .succulants,
+    .text {
+        width: 80%;
+        height: 40vh;
+    }
+
+    .text div {
+        width: 100%;
+    }
+
+    .one {
+        order: 1;
+    }
+    .two {
+        order: 2;
+    }
+    .three {
+        order: 3;
+    }
+    .four {
+        order: 4;
+    }
+    .five {
+        order: 5;
+    }
+    .six {
+        order: 6;
+    }
+
+    footer h2,
+    .left,
+    .right,
+    .bottom {
+        text-align: center;
+        width: 90%;
+    }
+    footer h3 {
+        text-align: center;
+    }
+    .bottom p {
+        margin-right: 0;
+        margin-top: 5%;
+    }
+    .right {
+        order: -1;
+    }
+    h2 {
+        order: -2;
+    }
+} /*this closes Mobile*/
